# datafusion-flight-poc

./: README.md
kotlin/src/main/kotlin/: Main.kt
rust/: Cargo.toml
rust/src/: main.rs
