[package]
name = "server"
version = "0.1.0"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
clap = "2.33.0"
env_logger = { version = "0.6", default-features = false }
futures = "0.3"
http = "0.1"
hyper = "0.12"
k8s-openapi = { version = "0.4.0", features = ["v1_13"] }
kube = "0.14"
log = "0.4"
prost = "0.5"
reqwest = "0.9.18"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1.1"
#tower-grpc = { version = "0.1.0", features = ["tower-hyper"] }
#tower-hyper = "0.1"
#tower-request-modifier = "0.1.0"
#tower-service = "0.2"
#tower-util = "0.1"

arrow = { git = "https://github.com/andygrove/arrow", branch = "master" }
arrow-flight = { git = "https://github.com/andygrove/arrow", branch = "master" }
datafusion = { git = "https://github.com/andygrove/arrow", branch = "master" }